# pyweb

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKING.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cli.py  config.toml  main.py  pyproject.toml  requirements.txt  scraper.c  scraper.py  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/actions/python-uv/: action.yml
.github/actions/security-scan/: action.yml
.github/assets/: demo.cast
.github/workflows/: build-release-reusable.yml  ci.yml  license-compliance.yml  release.yml  scorecard.yml  tag-release.yml  verify-provenance.yml
benchmarks/: benchmark.py  competitor.py  h3_benchmark.py  http_server.py  real_world_benchmark.py  real_world_benchmark_h3.py  ssl_cert.pem  ssl_key.pem
rust_scraper/: Cargo.toml
rust_scraper/src/: lib.rs
templates/: index.html  results.html
tests/: test_cli.py  test_config_file.py  test_input_file.py  test_main.py
