[build-system]
requires = ["maturin>=0.14,<1.11"]
build-backend = "maturin"

[project]
name = "pyweb-scraper"
version = "0.3.0"
authors = [
  { name="afadesigns", email="afa@afadesigns.com" },
]
description = "The fastest Python web scraper CLI, powered by Rust."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
]
dependencies = [
    "click",
]

[project.scripts]
pyweb = "cli:cli"
