[package]
name = "rust_scraper"
version = "0.11.0"
edition = "2021"

[lib]
name = "rust_scraper"
crate-type = ["cdylib"]

[dependencies]
scraper = "0.19.0"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
tokio = { version = "1", features = ["full", "io-uring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures = "0.3"
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
mimalloc = { version = "0.1.39", default-features = false }
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = "0.11.9"
tokio-util = { version = "0.7.10", features = ["compat"] }
url = "2.5.0"
bytes = "1.6.0"
http = "1.1.0"
rustls = { version = "0.21.0", features = ["dangerous_configuration"] }
webpki-roots = "0.22.0"
rustls-pki-types = "1.13.0"
rustls-pemfile = "1.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"