[package]
name = "rust_scraper"
version = "0.11.0"
edition = "2021"

[lib]
name = "rust_scraper"
crate-type = ["cdylib"]

[dependencies]
scraper = "0.24.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
tokio = { version = "1", features = ["full", "io-uring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures = "0.3"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
mimalloc = { version = "0.1.39", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
